# secret-handshake-rs

./: .gitmodules  Cargo.toml  README.md  build.rs
example/: example.rs
examples/: client.rs  server.rs
src/: client.rs  crypto.rs  errors.rs  ffi.rs  lib.rs  server.rs  test.rs  tmp.rs
