[package]
name = "secret_handshake"
version = "1.0.0"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "Implementation of the secret-handshake protocol."
repository = "https://github.com/AljoschaMeyer/secret-handshake-rs"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
sodiumoxide = "0.0.15"
libc = "0.2"
futures = "0.1.14"
tokio-io = "0.1.2"
void = "1.0.2"

[dev-dependencies]
partial-io = { version = "0.2.5", features = ["quickcheck", "tokio"] }
quickcheck = "0.4.1"

[build-dependencies]
gcc = "0.3"
