[package]
name = "secret_handshake"
version = "4.0.0"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "Implementation of the secret-handshake protocol."
repository = "https://github.com/AljoschaMeyer/secret-handshake-rs"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
sodiumoxide = "0.0.16"
libc = "0.2"
futures = "0.1.17"
tokio-io = "0.1.4"
void = "1.0.2"
atm-io-utils = "0.1.0"

[dev-dependencies]
partial-io = { version = "0.2.5", features = ["quickcheck", "tokio"] }
quickcheck = "0.4.1"
async-ringbuffer = "0.1.0"
rand = "0.3.18"

[build-dependencies]
cc = "1.0.0"
